klass-model-converters/klass-compiler/src/test/resources/cool/klass/model/converter/compiler/error/version/UnownedVersionErrorTest.klass
package example

association ExampleAssociation
{
    exampleClass: ExampleClass[1..1];
    exampleClassVersion: ExampleVersion[0..1] version;

    relationship this.id == ExampleVersion.id
}

class ExampleClass
{
    id: Long key;
}

class ExampleVersion
{
    id: Long key;
    number: Integer version;
}
